# textfx

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  run.sh
openspec/: config.yaml
qml/: BoxEffectsSection.qml  BoxMoveInteractionState.qml  BoxResizeInteractionState.qml  BoxRotateInteractionState.qml  CanvasInteractionState.qml  CentralCanvasShell.qml  ColorButton.qml  EditorChrome.qml  LayersSection.qml  LeftInspectorPanel.qml  Main.qml  NavigationSection.qml  PaintLayer.qml  PaintSection.qml  PathHandleInteractionState.qml  PerspectiveGeometry.qml  PerspectiveInteractionState.qml  RightInspectorPanel.qml  SelectedBoxState.qml  ShortcutMenuItem.qml  TextBoxDelegate.qml  TextBoxMoveArea.qml  TextEditOverlay.qml  TextEffectsSection.qml  TextPathGuide.qml  TextPathHandles.qml  TextPresetsSection.qml  TextPropertiesSection.qml  TextResizeHandles.qml  TextRotateHandle.qml  TextStyleButton.qml  ViewportMetrics.qml
qml/app/: EditorChrome.qml  Main.qml
qml/canvas/: PaintLayer.qml
qml/canvas/text/: TextPathHandles.qml
qml/commands/: EditorCommands.qml
qml/constants/: UiConstants.js
qml/features/canvas/: CanvasView.qml  PaintLayer.qml  ViewportMetrics.qml
qml/features/canvas/interactions/: BoxMoveInteractionState.qml  BoxResizeInteractionState.qml  PaintInteractionState.qml  PathHandleInteractionState.qml
qml/features/canvas/text/: TextBoxContent.qml  TextBoxDelegate.qml  TextBoxDelegateUi.qml  TextBoxEditControls.qml  TextBoxMoveArea.qml  TextBoxPathControls.qml  TextBoxSelectionControls.qml  TextEditOverlay.qml  TextPathGuide.qml  TextPathHandles.qml  TextResizeHandles.qml  TextRotateHandle.qml
qml/features/leftPanel/: LeftInspectorPanel.qml  PageTextsSection.qml  TextPresetsSection.qml  TextPropertiesSection.qml
qml/features/menus/: FileMenu.qml
qml/features/rightPanel/: BoxEffectsSection.qml  LayersSection.qml  NavigationSection.qml  PageEffectsSection.qml  PaintSection.qml  RightInspectorPanel.qml  TextEffectsSection.qml
qml/menus/: EditMenu.qml  ViewMenu.qml
qml/panels/left/: LeftInspectorPanel.qml  TextPropertiesSection.qml
qml/panels/right/: PageEffectsSection.qml  PaintSection.qml  TextEffectsSection.qml
qml/shared/: ColorButton.qml  SelectedBoxState.qml  TextStyleButton.qml
qml/shell/: EditorChrome.qml  ShortcutMenuItem.qml
qml/utils/: ColorUtils.js
src/app/: BoxRenderState.cpp  BoxRenderState.h  BoxesModel.cpp  BoxesModel.h  CommandAvailability.cpp  CommandAvailability.h  EditorController.cpp  EditorController.h  EditorControllerModelWorkflows.cpp  EditorControllerStringUtils.h  EditorControllerSupport.cpp  EditorLimits.cpp  EditorViewModels.cpp  EditorViewModels.h  EffectMetadata.cpp  EffectMetadata.h  PageTextService.cpp  PageTextService.h  ProjectExportService.cpp  ProjectExportService.h  ProjectSessionService.cpp  ProjectSessionService.h  SelectionQueryService.cpp  SelectionQueryService.h  TextBoxClipboardService.cpp  TextBoxClipboardService.h  TextBoxEditingService.cpp  TextBoxEditingService.h  TextBoxSelectionService.cpp  TextBoxSelectionService.h  TextPresetService.cpp  TextPresetService.h  TextWorkflowService.cpp  TextWorkflowService.h  main.cpp
src/app/controllers/: EditorController.cpp  EditorController.h  EditorControllerModelWorkflows.cpp  EditorControllerSupport.cpp
src/app/models/: BoxesModel.cpp  BoxesModel.h
src/app/project/: ProjectCreationWorkflow.cpp  ProjectCreationWorkflow.h  ProjectOpenWorkflow.cpp  ProjectOpenWorkflow.h  ProjectPageLoadWorkflow.cpp  ProjectPageLoadWorkflow.h  ProjectPersistenceWorkflow.cpp  ProjectPersistenceWorkflow.h  ProjectSaveExportWorkflow.cpp  ProjectSaveExportWorkflow.h  ProjectSession.cpp  ProjectSession.h
src/app/qt/: EditorLimits.cpp  EditorLimits.h  OutlinedTextItem.cpp  OutlinedTextItem.h  PaintLayerItem.cpp  PaintLayerItem.h
src/app/services/: TextBoxClipboardService.cpp
src/app/viewmodels/: BoxRenderState.cpp  BoxRenderState.h  EditorViewModels.cpp
src/application/ports/: IPageExportRenderer.h  IProjectDocumentStore.h  IProjectExportStore.h  IProjectPageSource.h  IProjectPageTextSource.h  IProjectPresetStore.h  IProjectRawPageSource.h  ProjectPageTexts.h
src/application/queries/: BoxRoles.h  CommandAvailability.cpp  EffectMetadata.cpp  EffectMetadata.h  SelectionQueryService.cpp  SelectionQueryService.h
src/application/services/: PageTextService.cpp  PageTextService.h  ProjectExportService.cpp  ProjectExportService.h  ProjectLayout.h  ProjectSessionService.cpp  ProjectSessionService.h  TextBoxClipboardService.cpp  TextBoxEditingService.cpp  TextBoxEditingService.h  TextBoxSelectionService.cpp  TextBoxSelectionService.h  TextPresetService.cpp  TextPresetService.h  TextWorkflowService.cpp  TextWorkflowService.h
src/core/: DocumentModel.cpp  DocumentModel.h  EffectLimits.h  GaussianBlur.h  ProjectStore.cpp  ProjectStore.h
src/domain/: AuthoringLimits.h
src/domain/document/: DocumentModel.cpp  PaintStrokeRules.h
src/fonts/: FontResolver.cpp  FontResolver.h  SfntNames.h
src/infrastructure/fonts/: FontResolver.cpp
src/infrastructure/persistence/: JsonSerializer.cpp  JsonSerializer.h  ProjectStore.cpp  ProjectStore.h
src/infrastructure/rendering/: GaussianBlur.h  RenderGraph.cpp  RenderPaintSpecs.cpp  RenderPaintSpecs.h  RenderTextLayout.cpp  RenderTextLayout.h  TextComposition.cpp  TextComposition.h
src/io/: JsonSerializer.cpp  JsonSerializer.h
src/render/: RenderGraph.cpp  RenderGraph.h  RenderTextLayout.cpp  RenderTextLayout.h
src/ui/: OutlinedTextItem.cpp  OutlinedTextItem.h
tests/: architecture_layer_check.cmake  core_io_tests.cpp  editor_controller_workflow_tests.cpp  outlined_text_item_tests.cpp  paint_layer_item_tests.cpp  qml_interaction_smoke_tests.cpp  qml_shell_smoke_tests.cpp  qml_text_box_delegate_smoke_tests.cpp  qt_smoke_tests.cpp  qt_test_helpers.cpp  qt_test_helpers.h  render_golden_check.cpp  serialization_check.cpp  text_composition_tests.cpp
tests/fixtures/: README.md  textfx-page.json  textfx-presets.json  typex-compatible-page.json  typex-compatible-presets.json
tools/: font_diagnostic.cpp
(+13 files in other folders)
